<resources>
    <string name="app_name">GenericApplication</string>

    <!-- Menu Items-->
    <string name="action_update">Güncelle</string>
    <string name="action_about">Hakkında</string>
    <string name="action_exit">Çıkış</string>

    <!--Runtime messages-->
    <string name="about_message">C ve Sistem Programcıları Derneği</string>
    <string name="about_title">CSD</string>
    <string name="about_positive_button">Tamam</string>
    <string name="notselected_title">Dikkat</string>
    <string name="notselected_message">Medeni durum seçimi yapmadınız!!!</string>
    <string name="notselected_positive_button">Tamam</string>

    <!-- Education RadioGroup texts-->
    <string name="textview_education_title">Eğitim Durumu</string>
    <string name="radiobutton_collage">Lise</string>
    <string name="radiobutton_university">Üniversite</string>
    <string name="radiobutton_msc">Yüksek Lisans</string>
    <string name="radiobutton_phd">Doktora</string>

    <!-- Marital Status RadioGroup texts-->
    <string name="textview_maritalstatus_title">Medeni Durumu</string>
    <string name="radiobutton_married">Evli</string>
    <string name="radiobutton_single">Bekar</string>
    <string name="radiobutton_divorced">Boşanmış</string>

    <string name="button_save">Kaydet</string>
    <string name="button_cancel">İptal</string>
</resources>