<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdateActivity">

    <RadioGroup
        android:id="@+id/updateActivityRadioGroupEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_education_title" />

        <RadioButton
            android:id="@+id/updateActivityRadioGroupCollage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="1"
            android:text="@string/radiobutton_collage" />

        <RadioButton
            android:id="@+id/updateActivityRadioButtonUniversity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/radiobutton_university" />

        <RadioButton
            android:id="@+id/updateActivityRadioButtonMsC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/radiobutton_msc" />

        <RadioButton
            android:id="@+id/updateActivityRadioButtonPhd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="@string/radiobutton_phd" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/updateActivityRadioGroupMaritalStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_maritalstatus_title" />

        <RadioButton
            android:checked="true"
            android:id="@+id/updateActivityRadioButtonMarried"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="1"
            android:text="@string/radiobutton_married" />

        <RadioButton
            android:id="@+id/updateActivityRadioButtonSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/radiobutton_single" />

        <RadioButton
            android:id="@+id/updateActivityRadioButtonDivorced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/radiobutton_divorced" />
    </RadioGroup>

    <Button
        android:onClick="onUpdateButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

    <Button
        android:onClick="onCancelButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

</LinearLayout>