<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <group>
        <!-- ... -->
        <item
            android:id="@+id/mainActivityMenuItemUpdate"
            android:orderInCategory="1"
            android:title="@string/action_update"
            app:showAsAction="collapseActionView" />
    </group>
    <group>
        <item
            android:id="@+id/mainActivityMenuItemAbout"
            android:orderInCategory="5"
            android:title="@string/action_about"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/mainActivityMenuItemExit"
            android:orderInCategory="6"
            android:title="@string/action_exit"
            app:showAsAction="collapseActionView" />
    </group>
</menu>